// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 changes class when hovered 1`] = `
<div>
  <h1
    className="black"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hello from 
    Typescript
     and 
    React
    !
  </h1>
</div>
`;

exports[`h1 changes class when hovered 2`] = `
<h1
  className="red"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hello from 
  Typescript
   and 
  React
  !
</h1>
`;

exports[`h1 changes class when hovered 3`] = `
<h1
  className="black"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hello from 
  Typescript
   and 
  React
  !
</h1>
`;
